vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__subprogram__tests__function_missing_return_type.snap
---
source: vhdl_syntax/src/parser/productions/subprogram.rs
expression: "$crate :: parser :: test_utils :: render_recovery(code, & tree, & diags)"
---
== source ==
function f(a : integer) return ;

== tree ==
SubprogramDeclaration
  FunctionSpecification
    Keyword(Function)
    Identifier 'f'
    ParameterList
      ParenthesizedInterfaceList
        LeftPar
        InterfaceList
          InterfaceObjectDeclaration
            IdentifierList
              Identifier 'a'
            Colon
            SubtypeIndication
              Name
                NameDesignatorPrefix
                  Identifier 'integer'
        RightPar
    Keyword(Return)
  SemiColon

== diagnostics ==
1:31 Expected(Node([Name]))
