vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__subprogram__tests__parse_subprogram_header_no_aspect.snap
---
source: vhdl_syntax/src/parser/productions/subprogram.rs
expression: "to_test_text(Parser::subprogram_header, \"generic (x: natural := 1; y: real)\")"
---
SubprogramHeader
  SubprogramHeaderGenericClause
    Keyword(Generic)
    ParenthesizedInterfaceList
      LeftPar
      InterfaceList
        InterfaceConstantDeclaration
          IdentifierList
            Identifier 'x'
          Colon
          SubtypeIndication
            Name
              Identifier 'natural'
          ColonEq
          LiteralExpression
            AbstractLiteral '1'
        SemiColon
        InterfaceConstantDeclaration
          IdentifierList
            Identifier 'y'
          Colon
          SubtypeIndication
            Name
              Identifier 'real'
      RightPar
