vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__subprogram__tests__parse_subprogram_header_with_aspect.snap
---
source: vhdl_syntax/src/parser/productions/subprogram.rs
expression: "to_test_text(Parser::subprogram_header,\n\"generic (x: natural := 1; y: real) generic map (x => 2, y => 0.4)\")"
---
SubprogramHeader
  SubprogramHeaderGenericClause
    Keyword(Generic)
    ParenthesizedInterfaceList
      LeftPar
      InterfaceList
        InterfaceConstantDeclaration
          IdentifierList
            Identifier 'x'
          Colon
          SubtypeIndication
            Name
              Identifier 'natural'
          ColonEq
          LiteralExpression
            AbstractLiteral '1'
        SemiColon
        InterfaceConstantDeclaration
          IdentifierList
            Identifier 'y'
          Colon
          SubtypeIndication
            Name
              Identifier 'real'
      RightPar
  GenericMapAspect
    Keyword(Generic)
    Keyword(Map)
    ParenthesizedAssociationList
      LeftPar
      AssociationList
        AssociationElement
          FormalPart
            Name
              Identifier 'x'
          RightArrow
          ActualPart
            AbstractLiteral '2'
        Comma
        AssociationElement
          FormalPart
            Name
              Identifier 'y'
          RightArrow
          ActualPart
            AbstractLiteral '0.4'
      RightPar
