vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__subprogram__tests__parses_subprogram_declaration.snap
---
source: vhdl_syntax/src/parser/productions/subprogram.rs
expression: "to_test_text(Parser::subprogram_body,\n\"\\\nfunction foo(arg : natural) return natural is\nbegin\nend function foo;\")"
---
SubprogramBody
  SubprogramBodyPreamble
    FunctionSpecification
      Keyword(Function)
      Identifier 'foo'
      ParameterList
        ParenthesizedInterfaceList
          LeftPar
          InterfaceList
            InterfaceConstantDeclaration
              IdentifierList
                Identifier 'arg'
              Colon
              SubtypeIndication
                Name
                  Identifier 'natural'
          RightPar
      Keyword(Return)
      Name
        Identifier 'natural'
    Keyword(Is)
  Keyword(Begin)
  SubprogramBodyEpilogue
    Keyword(End)
    Keyword(Function)
    Identifier 'foo'
    SemiColon
